[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiq"
version = "0.1.0"
description = "A Python package for data processing and machine learning."
authors = [{name = "Benjamin Anderson"}]
license = {text = "MIT"}
readme = "README.md"
dependencies=[
    "scikit-learn>=1.3.1",
    "fire",
    "onnxruntime",
    "transformers>=4.34",
    "joblib",
    "numpy",
    "rich>=13.7.0"
]

[project.scripts]
aiq = "aiq.aiq:main"